--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -19,7 +19,7 @@
     margin-top: 100px;
 }
 
-.Logon-container section.form form h1 {
+.logon-container section.form form h1 {
     font-size: 32px;
     margin-bottom: 32px;
 }
