--- a/src/global.css
+++ b/src/global.css
@@ -43,4 +43,9 @@ form input {
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
+    transition: filter;
+}
+
+.button:hover {
+    filter: brightness(90%);
 }
