--- a/src/pages/Register/style.css
+++ b/src/pages/Register/style.css
@@ -13,7 +13,7 @@
     width: 100%;
     padding: 96px;
     background: #f0f0f5;
-    box-shadow: 0 0 100 px rgba(0, 0, 0, 1);
+    box-shadow: 0 0 100px rgba(0, 0, 0, 1);
     border-radius: 8px;
 
     display: flex;
@@ -42,7 +42,15 @@
     max-width: 450px;
 }
 
-.register-container .content input-group{
-    width: 100%;
-    max-width: 450px;
+.register-container .content form input{
+    
+    margin-top: 8px;
+}
+
+.register-container .content form .input-group{
+    display: flex;
+}
+
+.register-container .content form .input-group input + input{
+    margin-left: 8px;
 }
